# irext-core

./: .gitignore  LICENSE.txt  README.md
src/example/decode_example/CC26xx/: .gitignore  IAR.tar.bz2
src/example/decode_example/Win32/: .gitignore  DecodeTestWin.sln
src/example/decode_example/Win32/DecodeTestWin/: DecodeTestWin.aps  DecodeTestWin.cpp  DecodeTestWin.rc  DecodeTestWin.vcxproj  DecodeTestWin.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.h
src/ext_tools/data_formatter/: .gitignore
src/ir_decoder/: .gitignore  Android.mk  Application.mk  CMakeLists.txt  NOTICE  bc_parse_parameter.c  bc_parse_parameter.h  ir_decode.def  ir_decoder.sln  ir_decoder.vcxproj  irda_ac_apply.c  irda_ac_build_frame.c  irda_ac_parse_forbidden_info.c  irda_ac_parse_frame_info.c  irda_ac_parse_frame_parameter.c  irda_ac_parse_parameter.c  irda_apply.c  irda_apply.h  irda_decode.c  irda_decode.h  irda_decode_jni.c  irda_decoder.exe.stackdump  irda_defs.h  irda_irframe.c  irda_irframe.h  irda_lib.c  irda_lib.h  irda_main.c  irda_parse_ac_parameter.c  irda_parse_ac_parameter.h  irda_parse_forbidden_info.c  irda_parse_forbidden_info.h  irda_parse_frame_parameter.c  irda_parse_frame_parameter.h  irda_tv_parse.c  irda_tv_parse_protocol.c  irda_utils.c  irda_utils.h  ucon_decode.c  ucon_decode.h  (+1 more)
src/ir_decoder/include/: ir_ac_apply.h  ir_ac_binary_parse.h  ir_ac_build_frame.h  ir_ac_control.h  ir_ac_parse_forbidden_info.h  ir_ac_parse_frame_info.h  ir_ac_parse_parameter.h  ir_decode.h  ir_defs.h  ir_tv_control.h  ir_utils.h  irda_ac_apply.h  irda_ac_build_frame.h  irda_ac_parse_forbidden_info.h  irda_ac_parse_frame_parameter.h  irda_ac_parse_parameter.h  irda_decode.h  irda_decode_jni.h  irda_defs.h  irda_main.h  irda_parse_ac_parameter.h  irda_tv_parse.h  irda_tv_parse_protocol.h  irda_utils.h  ucon_decode_jni.h
src/ir_decoder/jni/: Readme.md  ir_decode_jni.c  ir_decode_jni.h  irda_decode_jni.c  irda_decode_jni.h
src/ir_decoder/jni/include/: jni.h
src/ir_decoder/jni/include/win32/: jni_md.h
src/ir_decoder/src/: ir_ac_apply.c  ir_ac_binary_parse.c  ir_ac_build_frame.c  ir_ac_control.c  ir_ac_parse_forbidden_info.c  ir_ac_parse_frame_info.c  ir_ac_parse_parameter.c  ir_decode.c  ir_test_main.c  ir_tv_control.c  ir_utils.c
src/ir_encoder/: .gitignore  irda_ac_encode.py  irda_tv_encode.py  irda_tv_merge.py  irda_tv_protocol.py  irda_tv_protocol_hex.py  merge.py  s_ac_ii.py  s_acleaner.py  s_bc.py  s_bstb.py  s_crobot.py  s_dvd.py  s_fan.py  s_iptv.py  s_light.py  s_nw.py  s_pro.py  s_pro_hex.py  s_projector.py  s_stb.py  s_stereo.py  s_stereo_2.py  s_tv.py
src/ir_reverser/: .gitignore  CMakeLists.txt
src/ir_reverser/include/: ire_tv_protocol_def.h
src/ir_reverser/src/: ire_test_main.c
src/ir_reverser/test_src/: ir_source.txt
src/tools/data_formatter/: .gitignore
src/web_console/: .gitignore  License  README.md  irext_console.js  package.json  script_compile.sh  script_compiler.sh  script_init.sh  script_npm.sh  script_run.sh
src/web_console/authority/: admin_auth.js  ticket_pair.js
src/web_console/common/utils/: string_utils.js
src/web_console/configuration/: enums.js  error_code.js  system_configs.js
src/web_console/constants/: enums.js
src/web_console/data/: irext.sql
src/web_console/data/db/: irext_20161122.sql  irext_20161127.sql  irext_20161204.sql  irext_private_20161204.sql  irext_private_20170110.sql  irext_private_20170122.sql  irext_private_20170220.sql  irext_private_20170328.sql  irext_private_diff_20170112.sql
src/web_console/irda_encoder/: irda_tv_encode.py  irda_tv_protocol_hex.py
src/web_console/mini-poem/cache/: memcached.js  redis.js
src/web_console/mini-poem/configuration/: constants.js  enums.js
src/web_console/mini-poem/data_set/: ali_oss.js
src/web_console/mini-poem/db/mongodb/: mongodb_connection.js
src/web_console/mini-poem/http/: request.js
src/web_console/mini-poem/logging/: logger4js.js
src/web_console/mini-poem/mem/: map.js
src/web_console/mini-poem/msg_service/: notification_helper.js
src/web_console/mini-poem/sns/: weixin.js
src/web_console/mini-poem/timing/: scheduler.js
src/web_console/mini-poem/utils/: date_utils.js  object_reflection.js
src/web_console/mini_poem/cache/: base_cache.js  redis.js
src/web_console/mini_poem/configuration/: constants.js  error_code.js
src/web_console/mini_poem/crypto/: md5.js
src/web_console/mini_poem/data_set/: ali_oss.js
src/web_console/mini_poem/http/: request.js
src/web_console/mini_poem/utils/: map.js  string_utils.js  system_utils.js
src/web_console/model/: admin_dao.js  brand_dao.js  category_dao.js  city_dao.js  ir_protocol_dao.js  remote_index_dao.js  stb_operator_dao.js  virtual_remote_dao.js
src/web_console/response/: brand_response.js  category_response.js  city_response.js  integer_response.js  key_match_response.js  login_response.js  operator_response.js  protocol_response.js  province_response.js  remote_index_response.js  service_response.js  single_brand_response.js  single_category_response.js  stat_response.js  string_response.js  ticket_response.js
src/web_console/routes/: certificate_routes.js  code_manage_routes.js  decode_routes.js  index.js  internal_routes.js  navigation_routes.js  push_routes.js  stat_routes.js  test_routes.js
src/web_console/services/: certificate_service.js  code_manage_service.js  decode_service.js  internal_service.js  navigation_service.js  stat_service.js  test_service.js
src/web_console/web/: index.html  index_1.html
src/web_console/web/code/: index.html
src/web_console/web/css/: cover.css  index.css
src/web_console/web/doc/: index.html
src/web_console/web/error/: auth_error.html  confirm_pw.html
src/web_console/web/js/: index.js  ui.js
src/web_console/web/public_js/: bower.json  script_bower.sh
src/web_console/web/push/: index.html
src/web_console/web/stat/: index.html
src/web_console/web/version/: index.html
src/web_console/web/welcome/: index.html
src/web_console/work_unit/: certificate_logic.js  code_manage_logic.js  decode_logic.js  internal_logic.js  reverse_logic.js  stat_logic.js
(+129 files in other folders)
